Backend Updated and database connection is success..///

--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
 PORT = 5000
 
-DB_URI = "mongodb+srv://Stormbreaker:Stormbreaker0811@eventmanagementcluster.qv9g8ur.mongodb.net/EventManagementCluster/?retryWrites=true&w=majority"
+DB_URI = "mongodb+srv://Stormbreaker:Stormbreaker0811@eventmanagementcluster.qv9g8ur.mongodb.net/?retryWrites=true&w=majority"
