--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
-PORT = 5000
+PORT = 4000
 
-DB_URI = "mongodb+srv://Stormbreaker:Stormbreaker0811@eventmanagementcluster.qv9g8ur.mongodb.net/?retryWrites=true&w=majority"
+DB_URI = "mongodb+srv://pratik:Pratik@eventmanagementcluster.qv9g8ur.mongodb.net/?retryWrites=true&w=majority&appName=EventManagementCluster"
