--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^6.22.3",
     "react-scripts": "^5.0.1",
+    "react-spring": "^9.7.3",
     "react-time-picker": "^6.6.0",
     "web-vitals": "^2.1.4"
   },
