--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.8",
+    "firebase": "^10.11.1",
     "lottie-react": "^2.4.0",
     "react": "^18.2.0",
     "react-datepicker": "^6.9.0",
