--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,5 @@
 PORT = 4000
 
 DB_URI = "mongodb+srv://pratik:Pratik@eventmanagementcluster.qv9g8ur.mongodb.net/?retryWrites=true&w=majority&appName=EventManagementCluster"
+
+UPI_ID = "nimishgodbole409@oksbi"
