--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "multer": "^1.4.5-lts.1",
     "navigator": "^1.0.1",
     "nodemon": "^3.1.0",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "qrcode": "^1.5.3"
   }
 }
