--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "@fullcalendar/react": "^6.1.11",
     "@fullcalendar/timegrid": "^6.1.11",
     "@mui/icons-material": "^5.15.15",
+    "@mui/joy": "^5.0.0-beta.36",
     "@mui/lab": "^5.0.0-alpha.170",
     "@mui/material": "^5.15.16",
     "@mui/system": "^5.15.15",
@@ -20,9 +21,12 @@
     "axios": "^1.6.8",
     "firebase": "^10.11.1",
     "lottie-react": "^2.4.0",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
+    "react-big-calendar": "^1.12.2",
     "react-datepicker": "^6.9.0",
     "react-dom": "^18.2.0",
+    "react-google-calendar-api": "^2.3.0",
     "react-icons": "^5.2.1",
     "react-lottie": "^1.2.4",
     "react-phone-input-2": "^2.15.1",
